--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="21" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -28,9 +29,22 @@
         </activity>
         <activity android:name="XScrollViewActivity" >
         </activity>
-        <activity android:name="OverScrollViewActivity"></activity>
-        <activity android:name="RoundImageActivity"></activity>
-        <activity android:name="HttpQueryPhoneNumActivity"></activity>
+        <activity android:name="OverScrollViewActivity" >
+        </activity>
+        <activity android:name="RoundImageActivity" >
+        </activity>
+        <activity android:name="HttpQueryPhoneNumActivity" >
+        </activity>
+        <activity android:name=".photoview.AUILSampleActivity" >
+        </activity>
+        <activity android:name=".photoview.LauncherActivity" >
+        </activity>
+        <activity android:name=".photoview.RotationSampleActivity" >
+        </activity>
+        <activity android:name=".photoview.SimpleSampleActivity" >
+        </activity>
+        <activity android:name=".photoview.ViewPagerActivity" >
+        </activity>
     </application>
 
 </manifest>
