--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,6 +45,7 @@
         </activity>
         <activity android:name=".photoview.ViewPagerActivity" >
         </activity>
+        <activity android:name="AnimatedExpandableListViewActivity"></activity>
     </application>
 
 </manifest>
