--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".photoview.ViewPagerActivity" >
         </activity>
         <activity android:name="AnimatedExpandableListViewActivity"></activity>
+        <activity android:name="TimePickerActivity"></activity>
     </application>
 
 </manifest>
